<?php
declare(strict_types=1);

namespace App\GangOfFourDesignPatterns\GeneratePatterns\AbstractFactory\Products\Mens\Suits\Contracts;

/**
 * Абстрактный класс для мужских костюмов.
 *
 * Этот класс служит базовым классом для всех конкретных реализаций мужских костюмов.
 * Он может содержать общие свойства и методы, которые будут доступны всем
 * конкретным классам костюмов, наследующим этот абстрактный класс.
 *
 * Используя абстрактный класс, мы можем гарантировать, что все костюмы
 * будут иметь определённые характеристики и поведение, определённые в этом классе.
 */
abstract class MensSuitAbstract
{
    // Здесь могут быть определены общие свойства и методы для мужских костюмов
}
