<?php
declare(strict_types=1);

namespace App\GangOfFourDesignPatterns\GeneratePatterns\AbstractFactory\Products\Womens\Dresses\Contracts;

/**
 * Абстрактный класс для женских платьев.
 *
 * Этот класс служит базой для всех конкретных реализаций женских платьев,
 * обеспечивая единый интерфейс и общую функциональность.
 *
 * Классы, наследующие от этого абстрактного класса, должны реализовать
 * специфические детали, такие как стиль, цвет и материал платья.
 *
 * Общие методы или свойства, применимые ко всем женским платьям,
 * могут быть добавлены в этот класс для обеспечения единообразия.
 */
abstract class WomensDressAbstract
{
    // Здесь можно добавить общие методы или свойства для всех женских платьев.
}
