<?php
declare(strict_types=1);

namespace App\GangOfFourDesignPatterns\GeneratePatterns\AbstractFactory\Products\Womens\Suits\Contracts;

/**
 * Абстрактный класс для женских костюмов.
 *
 * Этот класс служит базой для всех конкретных реализаций женских костюмов,
 * обеспечивая единый интерфейс и общую функциональность.
 *
 * Классы, наследующие от этого абстрактного класса, должны реализовать
 * специфические детали, такие как стиль, цвет и материал костюма.
 *
 * Общие методы или свойства, применимые ко всем женским костюмам,
 * могут быть добавлены в этот класс для обеспечения единообразия.
 */
abstract class WomensSuitAbstract
{
    // Здесь можно добавить общие методы или свойства для всех женских костюмов.
}
